--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.1",
     "@nut-tree-fork/nut-js": "^4.2.6",
+    "@types/uuid": "^10.0.0",
     "canvas": "^3.1.0",
     "sharp": "^0.33.5",
     "tesseract.js": "^6.0.1",
